syntax = "proto3";


/** AGSE-PKI certificate signing request data. */
message AGSEPKICSRData {
	/** Potassium.Sign public key. */
	required bytes publicSigningKey = 1;

	/** Username. */
	required string username = 2;
}
